[project]
name = "pymibbrowser"
version = "0.1.0"
description = "Qt SNMP MIB browser — Python port of iReasoning MIB Browser"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "pymibbrowser contributors" },
]
keywords = ["snmp", "mib", "network", "monitoring", "qt", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "PyQt6>=6.6",
    "pysnmp>=7.1",
    "pysmi>=1.6",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[project.scripts]
pymibbrowser = "pymibbrowser.main:main"

[project.gui-scripts]
pymibbrowser-gui = "pymibbrowser.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pymibbrowser", "pymibbrowser.ui"]
include-package-data = true

[tool.setuptools.package-data]
pymibbrowser = ["resources/*"]
